--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,3 +2,15 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.gold{
+    color: #9E833C;
+    text-decoration: none;
+}
+
+.v-mid{
+    vertical-align: middle;
+
+}
+
+/* cor azul #2B4885 cor dourado #9E833C*/
