--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -9,8 +9,7 @@
             <i class="material-icons">
                 event
             </i>
-            Notificação de Vencimento de Certificação Digital
-        </a>
+            Início </a>
 
     </span>
 
