--- a/frontend/src/app/components/template/nav/nav.component.css
+++ b/frontend/src/app/components/template/nav/nav.component.css
@@ -11,5 +11,9 @@
     vertical-align: bottom;
 }
 
+.content{
+    padding: 16px;
+    background-color: #fff;
+}
 
 /* cor azul #2B4885 cor dourado #9E833C*/
