Crianção do componente clientes

--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="footer">
     <span><strong>
         Desenvolvido por <a class="gold" href="https://github.com/joseafsantos">
-            <i class="material-icons gold v-mid">computer</i> JAFS</a>.</strong>
+            <i class="material-icons gold v-mid">laptop_mac</i> JAFS</a>.</strong>
     </span>
 </mat-toolbar>
