--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header mat-elevation-z4">
     <span>
-        <a>
+        <a routerLink="/">
             <img class="logo" src="assets/img/logo-white.png" alt="logo">
         </a>
     </span>
@@ -9,7 +9,7 @@
             <i class="material-icons">
                 event
             </i>
-            Início </a>
+            Renovação de Certificados Digitais </a>
 
     </span>
 
