--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="container">
     <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="64">
         <mat-nav-list class="nav-list">
-            <strong><a mat-list-item>
+            <strong><a mat-list-item routerLink="/">
                     <i class="material-icons">
                         home
                     </i>
@@ -9,7 +9,7 @@
                 </a>
             </strong>
             <strong>
-                <a mat-list-item>
+                <a mat-list-item routerLink="/clients">
                     <i class="material-icons">
                         list_alt
                     </i>
@@ -19,6 +19,6 @@
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="content">
-        <app-home></app-home>
+        <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
