--- a/frontend/src/app/components/clients/client-create/client-create.component.html
+++ b/frontend/src/app/components/clients/client-create/client-create.component.html
@@ -1,1 +1,12 @@
-<p>client-create works!</p>
+<button mat-raised-button (click)="createClient()" color="primary">
+    Salvar
+</button>
+<button mat-raised-button (click)="cancel()">
+Voltar
+</button>
+
+<p>
+    <br>Teste os botões acima: <br>
+Salvar exibirá uma mensagem. <br>
+Voltar irá retornar a página anterior.
+</p>
