--- a/frontend/src/app/components/clients/client-create/client-create.component.css
+++ b/frontend/src/app/components/clients/client-create/client-create.component.css
@@ -1,3 +1,13 @@
 button{
     margin-right: 20px;
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.9rem;
+}
+
+mat-form-field {
+    margin-bottom: 0px;
+}
