criação do componente de leitura do bd

--- a/frontend/src/app/views/client-crud/client-crud.component.html
+++ b/frontend/src/app/views/client-crud/client-crud.component.html
@@ -1,3 +1,5 @@
-<button mat-raised-button (click)="navigateToClientCreate()">
-    Novo Certificado
+<button mat-raised-button (click)="navigateToClientCreate()" color="primary">
+    Novo Pedido
 </button>
+
+<app-client-read></app-client-read>
